# Multi-Products-Pricer-App

./: .gitignore  README.md  app.py  gbm_with_vasicek.py  gbm_with_vasicek_test.py  hello.py  main.py  own_test.py  pyproject.toml  requirements.txt  streamlit_option_pricer.py  taux.py  test zc.py  test.py  test_pricing.py  utils.py
Stochastic_process/: Geometric_brownian_motion.py  abstract_sctochastic.py  black_scholes_process.py  gbm_process.py  ornstein_uhlenbeck_process.py  ou_process.py
Taux/: abstract_taux.py  cubic.py  linear.py  manage_bloomberg_data.py  nelson_siegel.py  swenson.py  vasicek.py  vol_surface.py
config/: config.ini
data_options/: data_options_aapl.xlsx  data_options_amzn.xlsx  data_options_tsla.xlsx  options_data_STX500 2.xlsx
data_taux/: ESTER.csv  EURIBOR.csv  SOFR.csv  data_courbes_taux.xlsx  ester_data.csv  ester_data.xlsx  libor.csv  sofr_data.csv
daycount/: day_count_convention.py
investment_strategies/: abstract_strategy.py  strategy.py  structured_strategies.py  vanilla_strategies.py  vanilla_strategy.py
market/: __init__.py  day_count_convention.py  market.py  market_factory.py
option/: __init__.py  option.py
portfolio/: sensitivity.py  vanille_strategy.py
pricers/: __init__.py  bs_pricer.py  mc_pricer.py  node.py  pricing_model.py  regression.py  structured_pricer.py  tree_pricer.py
rate/: abstract_taux.py  bootstrap.py  curve_utils.py  interpolation.py  nelson_siegel.py  product.py  products.py  svensson.py  swenson.py  vasicek.py  vasicek_regress_old.py  vasicek_v2.py  zc_curve.py
risk_metrics/: backtest.py  (+5 more)
(+42 files in other folders)
